Bug 227475 - system monitor crashes on opening
Summary: system monitor crashes on opening
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-18 08:31 UTC by Peter
Modified: 2010-05-05 19:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter 2010-02-18 08:31:33 UTC
Application that crashed: ksysguard
Version of the application: 4.3.2 (KDE 4.3.2)
KDE Version: 4.3.2 (KDE 4.3.2)
Qt Version: 4.5.2
Operating System: Linux 2.6.31-16-generic i686
Distribution: Ubuntu 9.10

What I was doing when the application crashed:
system monitor crashes on opening...no apparent reason, not immediately reproducable, next time it opened flawlessly. System was under load if that matters.

 -- Backtrace:
Application: System Monitor (kdeinit4), signal: Segmentation fault
[KCrash Handler]
#6  QModelIndex (this=0xa01ff04, child=...) at ../../include/QtCore/../../src/corelib/kernel/qabstractitemmodel.h:65
#7  QSortFilterProxyModel::parent (this=0xa01ff04, child=...) at itemviews/qsortfilterproxymodel.cpp:1552
#8  0x072be016 in QModelIndex::parent (this=0xa01c9b8, painter=0xbfda247c, option=..., index=...) at ../../include/QtCore/../../src/corelib/kernel/qabstractitemmodel.h:369
#9  QTreeView::drawRow (this=0xa01c9b8, painter=0xbfda247c, option=..., index=...) at itemviews/qtreeview.cpp:1498
#10 0x072c52cc in QTreeView::drawTree (this=0xa01c9b8, painter=0xbfda247c, region=...) at itemviews/qtreeview.cpp:1403
#11 0x072c5d4d in QTreeView::paintEvent (this=0xa01c9b8, event=0xbfda2c84) at itemviews/qtreeview.cpp:1281
#12 0x06d86dd4 in QWidget::event (this=0xa01c9b8, event=0xbfda2c84) at kernel/qwidget.cpp:7687
#13 0x07136633 in QFrame::event (this=0xa01c9b8, e=0xbfda2c84) at widgets/qframe.cpp:559
#14 0x071d5494 in QAbstractScrollArea::viewportEvent (this=0x0, e=0xffffffec) at widgets/qabstractscrollarea.cpp:962
#15 0x07289087 in QAbstractItemView::viewportEvent (this=0xa01c9b8, event=0xbfda2c84) at itemviews/qabstractitemview.cpp:1476
#16 0x072c4434 in QTreeView::viewportEvent (this=0xa01c9b8, event=0xbfda2c84) at itemviews/qtreeview.cpp:1266
#17 0x071d7a95 in QAbstractScrollAreaPrivate::viewportEvent (this=0xa003550, o=0x9ff9fc0, e=0xbfda2c84) at widgets/qabstractscrollarea_p.h:100
#18 QAbstractScrollAreaFilter::eventFilter (this=0xa003550, o=0x9ff9fc0, e=0xbfda2c84) at widgets/qabstractscrollarea_p.h:111
#19 0x0073883a in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x9f43ba0, receiver=0x9ff9fc0, event=0xbfda2c84) at kernel/qcoreapplication.cpp:726
#20 0x06d31f2c in QApplicationPrivate::notify_helper (this=0x9f43ba0, receiver=0x9ff9fc0, e=0xbfda2c84) at kernel/qapplication.cpp:4052
#21 0x06d395ca in QApplication::notify (this=0x9f43ae0, receiver=0x9ff9fc0, e=0xbfda2c84) at kernel/qapplication.cpp:4021
#22 0x01084bfa in KApplication::notify (this=0x9f43ae0, receiver=0x9ff9fc0, event=0xbfda2c84) at ../../kdeui/kernel/kapplication.cpp:302
#23 0x007396cb in QCoreApplication::notifyInternal (this=0x9f43ae0, receiver=0x9ff9fc0, event=0xbfda2c84) at kernel/qcoreapplication.cpp:610
#24 0x06d8ee25 in QCoreApplication::sendSpontaneousEvent (this=0xa00b220, pdev=0x9fd1cec, rgn=..., offset=..., flags=<value optimized out>, sharedPainter=0x0, backingStore=0x9fd39a0)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:216
#25 QWidgetPrivate::drawWidget (this=0xa00b220, pdev=0x9fd1cec, rgn=..., offset=..., flags=<value optimized out>, sharedPainter=0x0, backingStore=0x9fd39a0) at kernel/qwidget.cpp:5079
#26 0x06f1d233 in QWidgetBackingStore::sync (this=0x9fd39a0) at painting/qbackingstore.cpp:1261
#27 0x06d80116 in QWidgetPrivate::syncBackingStore (this=0x9fd2da8) at kernel/qwidget.cpp:1603
#28 0x06d87215 in QWidget::event (this=0x9fd2cd0, event=0xa18c448) at kernel/qwidget.cpp:7827
#29 0x07154297 in QMainWindow::event (this=0x9fd2cd0, event=0xa18c448) at widgets/qmainwindow.cpp:1399
#30 0x0116adc4 in KMainWindow::event (this=0x9fd2cd0, ev=0xa18c448) at ../../kdeui/widgets/kmainwindow.cpp:1094
#31 0x011b130f in KXmlGuiWindow::event (this=0x9fd2cd0, ev=0xa18c448) at ../../kdeui/xmlgui/kxmlguiwindow.cpp:131
#32 0x01441ce4 in ?? () from /usr/lib/libkdeinit4_ksysguard.so
#33 0x06d31f54 in QApplicationPrivate::notify_helper (this=0x9f43ba0, receiver=0x9fd2cd0, e=0xa18c448) at kernel/qapplication.cpp:4056
#34 0x06d395ca in QApplication::notify (this=0x9f43ae0, receiver=0x9fd2cd0, e=0xa18c448) at kernel/qapplication.cpp:4021
#35 0x01084bfa in KApplication::notify (this=0x9f43ae0, receiver=0x9fd2cd0, event=0xa18c448) at ../../kdeui/kernel/kapplication.cpp:302
#36 0x007396cb in QCoreApplication::notifyInternal (this=0x9f43ae0, receiver=0x9fd2cd0, event=0xa18c448) at kernel/qcoreapplication.cpp:610
#37 0x0073a2b2 in QCoreApplication::sendEvent (receiver=0x0, event_type=0, data=0x9ec7e48) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:213
#38 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x9ec7e48) at kernel/qcoreapplication.cpp:1247
#39 0x0073a47d in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1140
#40 0x007643ff in QCoreApplication::sendPostedEvents (s=0x9f45d10) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#41 postEventSourceDispatch (s=0x9f45d10) at kernel/qeventdispatcher_glib.cpp:210
#42 0x00506e88 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#43 0x0050a730 in ?? () from /lib/libglib-2.0.so.0
#44 0x0050a863 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#45 0x0076402c in QEventDispatcherGlib::processEvents (this=0x9f185f8, flags=...) at kernel/qeventdispatcher_glib.cpp:327
#46 0x06dd2be5 in QGuiEventDispatcherGlib::processEvents (this=0x9f185f8, flags=...) at kernel/qguieventdispatcher_glib.cpp:202
#47 0x00737c79 in QEventLoop::processEvents (this=0xbfda3854, flags=) at kernel/qeventloop.cpp:149
#48 0x007380ca in QEventLoop::exec (this=0xbfda3854, flags=...) at kernel/qeventloop.cpp:201
#49 0x0073a53f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#50 0x06d31dd7 in QApplication::exec () at kernel/qapplication.cpp:3525
#51 0x01440837 in kdemain () from /usr/lib/libkdeinit4_ksysguard.so
#52 0x0804dde1 in launch (argc=<value optimized out>, _name=<value optimized out>, args=<value optimized out>, cwd=0x0, envc=1, envs=0x9f02ce3 "DISPLAY=:0.0", reset_env=false, tty=0x0, 
    avoid_loops=false, startup_id_str=0x9f02cf4 "Peter-R600-Kubuntu;1266478018;397203;2024_TIME192438092") at ../../kinit/kinit.cpp:677
#53 0x0804ea35 in handle_launcher_request (sock=<value optimized out>, who=<value optimized out>) at ../../kinit/kinit.cpp:1169
#54 0x0804eeac in handle_requests (waitForPid=<value optimized out>) at ../../kinit/kinit.cpp:1362
#55 0x0804fbaf in main (argc=2, argv=0xbfda4154, envp=0xbfda4160) at ../../kinit/kinit.cpp:1793

Reported using DrKonqi
Comment 1 Adam Kristof 2010-03-03 18:21:18 UTC
System monitor crashes on opening after nVdia driver installation.

Hardware: HP DV7-3030ew with i7 & nVidia GT 230M graphics.
System: openSuSE 11.2 x86_64, kernel 2.6.31.12
KDE4: 'kdebase4-workspace 4.3.5-0.2.1'
nVidia driver: 190.53 (certified)
KDE Crash Handler: "Segmentation fault", (missing debug symbol info) 
{ starts with many entries for '/usr/lib64/libQtGui.so.4'
  ends with #40 0x0000000000400699 in _start ()   }

Bad nVidia driver?
Comment 2 John Tapsell 2010-05-05 19:05:10 UTC
SVN commit 1123228 by johnflux:

Fix crash - we could call endMoveRows when we hadn't called beginMoveRows

This was the result of many many bug reports.  I only found the reason because of more strict assertions in Qt 4.7.  Thank you Qt!

BUG:227475
BUG:230488

 M  +35 -0     ProcessModel.cc  
 M  +5 -0      ProcessModel_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1123228
Comment 3 John Tapsell 2010-05-05 19:13:27 UTC
SVN commit 1123232 by johnflux:

Fix crash - we could call endMoveRows when we hadn't called beginMoveRows

This was the result of many many bug reports.  I only found the reason because of more strict assertions in Qt 4.7.  Thank you Qt!

BUG:227475
BUG:230488

 M  +35 -0     ProcessModel.cc  
 M  +3 -0      ProcessModel_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1123232