Fix crash - we could call endMoveRows when we hadn't called beginMoveRows

This was the result of many many bug reports.  I only found the reason because of more strict assertions in Qt 4.7.  Thank you Qt!

BUG:227475
BUG:230488

svn path=/trunk/KDE/kdebase/workspace/; revision=1123228